--- a/.github/workflows/release-fit-ld-window.yml
+++ b/.github/workflows/release-fit-ld-window.yml
@@ -97,12 +97,14 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@nightly
+        with:
+          toolchain: nightly-2025-12-13
 
       - name: Rebuild gnomon (release, native cpu)
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
 
       - name: Setup Python
         uses: actions/setup-python@v5
