--- a/.github/workflows/release-fit.yml
+++ b/.github/workflows/release-fit.yml
@@ -40,12 +40,14 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@nightly
+        with:
+          toolchain: nightly-2025-12-13
 
       - name: Rebuild gnomon (release, native cpu)
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
 
       - name: Timed gnomon fit run (no --ld)
         run: |
@@ -99,12 +101,14 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@nightly
+        with:
+          toolchain: nightly-2025-12-13
 
       - name: Rebuild gnomon (release, native cpu)
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
 
       - name: Timed gnomon fit run (--ld)
         run: |
