--- a/.github/workflows/build-release-all.yml
+++ b/.github/workflows/build-release-all.yml
@@ -101,7 +101,7 @@ jobs:
           GNOMON_SKIP_LINT_CHECKS: "1"
           # Embed release tag in binary for version command
           GNOMON_RELEASE_TAG: "auto-${{ github.run_id }}-${{ github.run_number }}"
-        run: cargo +nightly build --release --target ${{ matrix.target }}
+        run: cargo +nightly-2025-12-13 build --release --target ${{ matrix.target }}
 
 
       - name: Package (Unix)
