--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build gnomon (release)
         run: |
           set -euxo pipefail
-          CARGO_PROFILE_RELEASE_BUILD_OVERRIDE_DEBUG=true cargo build --release --bin gnomon
+          CARGO_PROFILE_RELEASE_BUILD_OVERRIDE_DEBUG=true cargo +nightly-2025-12-13 build --release --bin gnomon
 
       - name: Upload gnomon binary
         uses: actions/upload-artifact@v4
