--- a/.github/workflows/release-fit-ld-window.yml
+++ b/.github/workflows/release-fit-ld-window.yml
@@ -104,7 +104,7 @@ jobs:
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly-2025-12-13 build --release --bin gnomon
 
       - name: Setup Python
         uses: actions/setup-python@v5
