--- a/.github/workflows/release-fit.yml
+++ b/.github/workflows/release-fit.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly-2025-12-13 build --release --bin gnomon
 
       - name: Timed gnomon fit run (no --ld)
         run: |
@@ -108,7 +108,7 @@ jobs:
         run: |
           set -euxo pipefail
           cargo clean
-          RUSTFLAGS="-C target-cpu=native" cargo +nightly build --release --bin gnomon
+          RUSTFLAGS="-C target-cpu=native" cargo +nightly-2025-12-13 build --release --bin gnomon
 
       - name: Timed gnomon fit run (--ld)
         run: |
