Write final .sscore atomically and tighten ignore patterns

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,27 @@ gh_*/
 **/*
 !**/
 !**/*.*
+
+# Local workspace/editor state (machine-specific, not project source)
+/.claude/
+/proofs/.claude/
+
+# Lean/Lake build cache and vendored package checkouts (generated; huge/noisy)
+/.lake/
+
+# Scratch/debug files from ad-hoc investigations (ephemeral)
+/proofs/.tmp_find.lean
+/diff.txt
+
+# Downloaded/generated research artifacts (large reproducible data, not source)
+/data/snp_intersection_downloads/
+/data/snp_intersection_downloads_v2/
+/local_power/
+
+# Python bytecode cache (generated, interpreter-version specific)
+/scripts/__pycache__/
+
+# Local experiment outputs in repo root (analysis scratch, not canonical inputs)
+/Cargo.lock
+/confounding.tsv
+/divergence_g20.tsv
